Property updated to video

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta property="og:image" content="https://static.wikia.nocookie.net/kenganashura/images/e/e1/Tokita_Ohma_on_the_final_day.png">
+    <meta property="og:video" content="https://www.youtube.com/watch?v=y2YibV3xgM8">
     <meta property="og:description" content="The Testing Tiger proporciona información
     sobre tecnologías Open Web, incluidas HTML, CSS y APIs para ambos sitios web
     y aplicaciones HTML5. También documenta productos Tigermans, como el sistema operativo Tiger Maligno Boss">
@@ -9,5 +9,6 @@
   </head>
   <body>
     <p>Esto es un test para validar la historia de usuario acerca de rich links</p>
+    <script>alert(localStorage.access_token)</script>
   </body>
 </html>
