--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta property="og:video" content="https://www.youtube.com/v/BQBjVr1iHH4">
+    <meta property="og:video" content="https://www.youtube.com/watch?v=y2YibV3xgM8">
     <meta property="og:video:height" content="640" />
     <meta property="og:video:width" content="385" />
     <meta property="og:description" content="The Testing Tiger proporciona información
