--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <meta property="og:image" content="https://static.wikia.nocookie.net/kenganashura/images/e/e1/Tokita_Ohma_on_the_final_day.png">
+    <!-- <meta property="og:image" content="https://static.wikia.nocookie.net/kenganashura/images/e/e1/Tokita_Ohma_on_the_final_day.png"> -->
     <meta property="og:description" content="The Testing Tiger proporciona información
     sobre tecnologías Open Web, incluidas HTML, CSS y APIs para ambos sitios web
     y aplicaciones HTML5. También documenta productos Tigermans, como el sistema operativo Tiger Maligno Boss">
     <meta property="og:title" content="Testing Richlink">
-    <title>Testing Rich Liks</title>
+    <!-- <title>Testing Rich Liks</title> -->
   </head>
   <body>
     <p>Esto es un test para validar la historia de usuario acerca de rich links</p>
