--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta property="og:description" content="The Testing Tiger proporciona información
     sobre tecnologías Open Web, incluidas HTML, CSS y APIs para ambos sitios web
     y aplicaciones HTML5. También documenta productos Tigermans, como el sistema operativo Tiger Maligno Boss">
-    <meta property="og:title" content="Testing Richlink">
-    <!-- <title>Testing Rich Liks</title> -->
+    <!-- <meta property="og:title" content="Testing Richlink"> -->
+    <title>Testing Rich Liks</title>
   </head>
   <body>
     <p>Esto es un test para validar la historia de usuario acerca de rich links</p>
