--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
   </head>
   <body>
     <p>Esto es un test para validar la historia de usuario acerca de rich links</p>
+    <div>
+      <p>Video de prueba con meta data para editar y probar</p>
+      <video controls autoplay>
+        <source src="Steven Universe.mp4" type="video/mp4"> 
+      </video>
+    </div>
   </body>
 </html>
