Some changes applied

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <title>Testing Rich Liks</title>
   </head>
   <body>
-    <p>Esto es un test para validar la historia de usuario acerca de rich links</p>
+    <h1>Esto es un test para validar la historia de usuario acerca de rich links</h1>
     <div>
       <p>Video de prueba con meta data para editar y probar</p>
-      <video controls autoplay>
+      <video controls autoplay width="640" height="428">
+        <meta property="og:image" content="https://www.eltiempo.com/files/image_640_428/uploads/2020/03/22/5e77b3da53f04.jpeg">
+        <meta property="og:description" content="The Testing Tiger proporciona información
+        sobre tecnologías Open Web, incluidas HTML, CSS y APIs para ambos sitios web
+        y aplicaciones HTML5. También documenta productos Tigermans, como el sistema operativo Tiger Maligno Boss">
+        <meta property="og:title" content="Testing Richlink for Videos">
         <source src="Steven Universe.mp4" type="video/mp4"> 
       </video>
     </div>
