--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <meta property="og:image" content="https://static.wikia.nocookie.net/kenganashura/images/e/e1/Tokita_Ohma_on_the_final_day.png">
+    <meta property="og:video" content="https://astonishing-bienenstitch-273b26.netlify.app/Steven%20Universe.mp4">
+    <!-- <meta property="og:image" content="https://static.wikia.nocookie.net/kenganashura/images/e/e1/Tokita_Ohma_on_the_final_day.png"> -->
     <meta property="og:description" content="The Testing Tiger proporciona información
     sobre tecnologías Open Web, incluidas HTML, CSS y APIs para ambos sitios web
     y aplicaciones HTML5. También documenta productos Tigermans, como el sistema operativo Tiger Maligno Boss">
@@ -12,11 +13,6 @@
     <div>
       <p>Video de prueba con meta data para editar y probar</p>
       <video controls autoplay width="640" height="428">
-        <meta property="og:image" content="https://www.eltiempo.com/files/image_640_428/uploads/2020/03/22/5e77b3da53f04.jpeg">
-        <meta property="og:description" content="The Testing Tiger proporciona información
-        sobre tecnologías Open Web, incluidas HTML, CSS y APIs para ambos sitios web
-        y aplicaciones HTML5. También documenta productos Tigermans, como el sistema operativo Tiger Maligno Boss">
-        <meta property="og:title" content="Testing Richlink for Videos">
         <source src="Steven Universe.mp4" type="video/mp4"> 
       </video>
     </div>
