include meta data for video

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Esto es un test para validar la historia de usuario acerca de rich links</h1>
     <div>
       <p>Video de prueba con meta data para editar y probar</p>
-      <video controls autoplay width="640" height="428">
+      <video controls autoplay width="640" height="428" preload="metadata">
         <source src="Steven Universe.mp4" type="video/mp4"> 
       </video>
     </div>
