--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
   <head>
-    <meta property="og:video" content="Steven Universe"> 
     <meta property="og:description" content="The Testing Tiger proporciona información
     sobre tecnologías Open Web, incluidas HTML, CSS y APIs para ambos sitios web
     y aplicaciones HTML5. También documenta productos Tigermans, como el sistema operativo Tiger Maligno Boss">
@@ -11,7 +10,7 @@
     <h1>Esto es un test para validar la historia de usuario acerca de rich links</h1>
     <div>
       <p>Video de prueba con meta data para editar y probar</p>
-      <video controls autoplay width="640" height="428" preload="metadata" name="Steven Universe">
+      <video controls autoplay width="640" height="428" preload="metadata">
         <source src="Steven Universe.mp4" type="video/mp4"> 
       </video>
     </div>
