--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <html>
   <head>
-    <meta property="og:description" content="The Testing Tiger proporciona información
-    sobre tecnologías Open Web, incluidas HTML, CSS y APIs para ambos sitios web
-    y aplicaciones HTML5. También documenta productos Tigermans, como el sistema operativo Tiger Maligno Boss">
-    <meta property="og:title" content="Testing Richlink">
-    <title>Testing Rich Liks</title>
+    <meta property="og:audio" content="https://example.com/bond/theme.mp3" />
+    <meta property="og:description" 
+      content="Sean Connery found fame and fortune as the
+               suave, sophisticated British agent, James Bond." />
+    <meta property="og:determiner" content="the" />
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:locale:alternate" content="fr_FR" />
+    <meta property="og:locale:alternate" content="es_ES" />
+    <meta property="og:site_name" content="IMDb" />
+    <meta property="og:video" content="https://example.com/bond/trailer.swf" />
   </head>
   <body>
     <h1>Esto es un test para validar la historia de usuario acerca de rich links</h1>
     <div>
       <p>Video de prueba con meta data para editar y probar</p>
-      <video controls autoplay width="640" height="428" preload="metadata">
+      <video controls autoplay width="640" height="428">
         <source src="Steven Universe.mp4" type="video/mp4"> 
       </video>
     </div>
