--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <html>
   <head>
-    <meta property="og:audio" content="https://example.com/bond/theme.mp3" />
-    <meta property="og:description" 
-      content="Sean Connery found fame and fortune as the
-               suave, sophisticated British agent, James Bond." />
-    <meta property="og:determiner" content="the" />
-    <meta property="og:locale" content="en_GB" />
-    <meta property="og:locale:alternate" content="fr_FR" />
-    <meta property="og:locale:alternate" content="es_ES" />
-    <meta property="og:site_name" content="IMDb" />
-    <meta property="og:video" content="https://example.com/bond/trailer.swf" />
+    <meta property="og:image" content="https://static.wikia.nocookie.net/kenganashura/images/e/e1/Tokita_Ohma_on_the_final_day.png">
+    <meta property="og:description" content="The Testing Tiger proporciona información
+    sobre tecnologías Open Web, incluidas HTML, CSS y APIs para ambos sitios web
+    y aplicaciones HTML5. También documenta productos Tigermans, como el sistema operativo Tiger Maligno Boss">
+    <meta property="og:title" content="Testing Richlink">
+    <title>Testing Rich Liks</title>
   </head>
   <body>
     <h1>Esto es un test para validar la historia de usuario acerca de rich links</h1>
