Include new line

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     sobre tecnologías Open Web, incluidas HTML, CSS y APIs para ambos sitios web
     y aplicaciones HTML5. También documenta productos Tigermans, como el sistema operativo Tiger Maligno Boss"> -->
     <!-- <meta property="og:title" content="Testing Richlink"> -->
+    <meta http-equiv="origin-trial" content="$newtonOriginTrialToken">
     <title>Testing Rich Liks Edit</title>
   </head>
   <body>
