--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html>
   <head>
-    <!-- <meta property="og:image" content="https://static.wikia.nocookie.net/kenganashura/images/e/e1/Tokita_Ohma_on_the_final_day.png"> -->
+    <meta property="og:image" content="https://static.wikia.nocookie.net/kenganashura/images/e/e1/Tokita_Ohma_on_the_final_day.png">
     <!-- <meta property="og:description" content="The Testing Tiger proporciona información
     sobre tecnologías Open Web, incluidas HTML, CSS y APIs para ambos sitios web
     y aplicaciones HTML5. También documenta productos Tigermans, como el sistema operativo Tiger Maligno Boss"> -->
-    <!-- <meta property="og:title" content="Testing Richlink"> -->
-    <meta http-equiv="origin-trial" content="$newtonOriginTrialToken">
+    <meta property="og:title" content="Testing Richlink">
     <title>Testing Rich Liks Edit</title>
   </head>
   <body>
