Include meta for image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta property="og:description" content="The Testing Tiger proporciona información
     sobre tecnologías Open Web, incluidas HTML, CSS y APIs para ambos sitios web
     y aplicaciones HTML5. También documenta productos Tigermans, como el sistema operativo Tiger Maligno Boss">
+    <meta property="og:image" content="https://developer.mozilla.org/static/img/opengraph-logo.png" />
     <meta property="og:title" content="Testing Richlink">
     <title>Testing Rich Liks</title>
   </head>
