--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <h1>Esto es un test para validar la historia de usuario acerca de rich links</h1>
     <div>
       <p>Video de prueba con meta data para editar y probar</p>
-      <video controls autoplay width="640" height="428">
+      <audio controls autoplay width="640" height="428">
         <source src="We.m4a" type="audio/m4a"> 
-      </video>
+      </audio>
     </div>
   </body>
 </html>
