--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
       <p>Video de prueba con meta data para editar y probar</p>
       <audio controls autoplay width="640" height="428">
-        <source src="We.wav" type="audio/wav"> 
+        <source src="We.mp4" type="audio/mp4"> 
       </audio>
     </div>
   </body>
